# python-PDF-services

./: analyze_pdf_file.py  analyze_pdf_file_2.py  change_metadata.py  change_metadata_2.py  check_duplicate_file_by_context.py  merge_pdf_files.py  pyproject.toml
